--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "globals-loader": "0.0.3",
     "graceful-fs": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
