--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ltss angular js client modules",
   "main": "index.js",
   "author": "FEi Systems",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "tfs",
     "url": "https://localhost"
@@ -29,6 +29,7 @@
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
     "cuid": "^1.3.8",
+    "del": "^2.2.0",
     "es6-promise": "^3.1.2",
     "es6-promise-loader": "^1.0.1",
     "es6-shim": "^0.35.0",
@@ -46,6 +47,7 @@
     "globals-loader": "0.0.3",
     "graceful-fs": "^4.0.0",
     "gulp": "^3.9.1",
+    "gulp-help": "^1.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^4.0.0",
     "gulp-util": "^3.0.7",
@@ -93,6 +95,7 @@
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "url-loader": "^0.5.7",
+    "vinyl-paths": "^2.1.0",
     "webpack": "^2.1.0-beta.7",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.0.0-beta",
