--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "jquery"
   ],
   "devDependencies": {
-    "angular-mocks": "^1.5.5",
     "awesome-typescript-loader": "^0.17.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
+    "browser-sync": "^2.12.8",
     "chai": "^3.5.0",
+    "connect-history-api-fallback": "^1.2.0",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
     "cuid": "^1.3.8",
@@ -58,6 +59,7 @@
     "istanbul-instrumenter-loader": "^0.2.0",
     "json-loader": "^0.5.4",
     "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^0.5.5",
@@ -99,12 +101,12 @@
     "webpack": "^2.1.0-beta.7",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.0.0-beta",
-    "webpack-merge": "^0.12.0"
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "angular": "^1.5.5",
-    "angular-ui-router": "^1.0.0-alpha.4",
-    "core-js": "^2.4.0",
+    "angular-mocks": "^1.5.5",
+    "angular-ui-router": "^1.0.0-alpha.5",
     "jquery": "^2.2.3",
     "kendo-ui-core": "^1.0.2"
   }
