--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015-native-modules": "^6.6.0",
     "browser-sync": "^2.12.8",
     "chai": "^3.5.0",
+    "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.2.0",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
