--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "browser-sync": "^2.12.8",
@@ -32,9 +33,10 @@
     "css-loader": "^0.23.1",
     "cuid": "^1.3.8",
     "del": "^2.2.0",
+    "es5-shim": "^4.5.8",
     "es6-promise": "^3.1.2",
     "es6-promise-loader": "^1.0.1",
-    "es6-shim": "^0.35.0",
+    "es6-shim": "^0.35.1",
     "es7-reflect-metadata": "^1.6.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.1",
@@ -54,6 +56,7 @@
     "gulp-template": "^4.0.0",
     "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
+    "html-webpack-harddisk-plugin": "0.0.2",
     "html-webpack-plugin": "^2.16.1",
     "http-server": "^0.9.0",
     "imports-loader": "^0.6.5",
