--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "globals-loader": "0.0.3",
     "graceful-fs": "^4.0.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-help": "^1.6.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-template": "^4.0.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
     "html-webpack-harddisk-plugin": "0.0.2",
@@ -105,7 +108,8 @@
     "webpack": "^2.1.0-beta.7",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.0.0-beta",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "angular": "^1.5.5",
