--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
         "global-require": 1,
         "no-trailing-spaces": 0,
         "no-use-before-define": 0,
+        "no-useless-concat": 0,
         "quotes": ["error", "single", {"allowTemplateLiterals": true}]
     }
 }
