--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
         "no-trailing-spaces": 0,
         "no-use-before-define": 0,
         "no-useless-concat": 0,
+        "prefer-template":0,
         "quotes": ["error", "single", {"allowTemplateLiterals": true}]
     }
 }
