--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,8 @@
 .settings
 *.log
 node_modules/
-dist/
-dist.dev/
-dist.test/
-dest/
-dest.dev/
-dest.test/
-coverage/
+dist*/
+*dist/
+dest*/
+*.dest/
+test.coverage/
