--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery"
   ],
   "devDependencies": {
+    "angular-ui-router": "^1.0.0-alpha.5",
     "awesome-typescript-loader": "^0.17.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
@@ -97,6 +98,8 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.0.0",
     "supports-color": "^3.1.2",
+    "through-gulp": "^0.5.0",
+    "through2": "^2.0.1",
     "ts-helpers": "^1.1.1",
     "ts-node": "^0.7.2",
     "tslint": "^3.9.0",
@@ -104,6 +107,7 @@
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "url-loader": "^0.5.7",
+    "vinyl-named": "^1.1.0",
     "vinyl-paths": "^2.1.0",
     "webpack": "^2.1.0-beta.7",
     "webpack-dev-middleware": "^1.6.1",
