--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-help": "^1.6.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-template": "^4.0.0",
     "gulp-uglify": "^1.5.3",
