--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gulp-help": "^1.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-template": "^4.0.0",
     "gulp-uglify": "^1.5.3",
@@ -92,7 +93,7 @@
     "raw-loader": "^0.5.1",
     "require-dir": "^0.3.0",
     "rimraf": "^2.5.2",
-    "run-sequence": "^1.1.5",
+    "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
