--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "^3.2.2",
     "raw-loader": "^0.5.1",
+    "readline-sync": "^1.4.2",
     "require-dir": "^0.3.0",
     "rimraf": "^2.5.2",
     "run-sequence": "^1.2.0",
