--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "devDependencies": {
     "angular-ui-router": "^1.0.0-alpha.5",
+    "assertion-error": "^1.0.2",
     "awesome-typescript-loader": "^0.17.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
