--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Chrome Attach with sourcemaps",
+            "name": "Chrome Attach",
             "type": "chrome",
             "request": "attach",
             "port": 9222,
@@ -10,7 +10,7 @@
             "webRoot": "${workspaceRoot}"
         },
 		{
-			"name": "Chrome Launch with sourcemaps",
+			"name": "Chrome Launch",
 			"type": "chrome",
 			"request": "launch",
 			"url": "http://localhost:3000",
