--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "type": "tfs",
     "url": "https://localhost"
   },
-  "scripts": {},
+  "scripts": {
+    "postinstall": "typings install"
+  },
   "keywords": [
     "angular",
     "webpack",
     "es6"
   ],
   "devDependencies": {
-    "angular-ui-router": "^1.0.0-alpha.5",
     "assertion-error": "^1.0.2",
     "awesome-typescript-loader": "^0.17.0",
     "babel-core": "^6.8.0",
@@ -25,6 +26,7 @@
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-native-modules": "^6.6.0",
+    "babel-register": "^6.9.0",
     "browser-sync": "^2.12.8",
     "chai": "^3.5.0",
     "colors": "^1.1.2",
@@ -48,6 +50,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "glob": "^7.0.3",
     "globals-loader": "0.0.3",
     "graceful-fs": "^4.0.0",
     "gulp": "^3.9.1",
@@ -107,15 +110,19 @@
     "tslint": "^3.9.0",
     "tslint-loader": "^2.1.4",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1",
+    "typings": "^1.0.4",
     "url-loader": "^0.5.7",
     "vinyl-named": "^1.1.0",
     "vinyl-paths": "^2.1.0",
-    "webpack": "^2.1.0-beta.7",
+    "webpack": "^2.1.0-beta.13",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^2.0.0-beta",
+    "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-hot-middleware": "^2.10.0",
-    "webpack-stream": "^3.2.0"
+    "webpack-stream": "^3.2.0",
+    "yargs": "^4.7.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^1.0.12"
   },
   "dependencies": {
     "angular": "^1.5.5",
