--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,9 @@
   ],
   "filesGlob": [
     "./src/**/*.ts",
-    "./test/**/*.ts",
     "!./node_modules/**/*.ts",
     "src/custom-typings.d.ts",
-    "typings/browser.d.ts"
+    "typings/index.d.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "resolveGlobs": true,
