--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "devDependencies": {
     "assertion-error": "^1.0.2",
     "awesome-typescript-loader": "^0.17.0",
-    "babel-core": "^6.8.0",
+    "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-native-modules": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
+    "babel-runtime": "^6.9.2",
     "browser-sync": "^2.12.8",
     "chai": "^3.5.0",
     "colors": "^1.1.2",
@@ -98,6 +99,7 @@
     "rimraf": "^2.5.2",
     "run-sequence": "^1.2.0",
     "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
