--- a/package.json
+++ b/package.json
@@ -27,20 +27,13 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
-    "babel-runtime": "^6.9.2",
     "browser-sync": "^2.12.8",
     "chai": "^3.5.0",
     "colors": "^1.1.2",
     "connect-history-api-fallback": "^1.2.0",
     "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
-    "cuid": "^1.3.8",
     "del": "^2.2.0",
-    "es5-shim": "^4.5.8",
-    "es6-promise": "^3.1.2",
-    "es6-promise-loader": "^1.0.1",
-    "es6-shim": "^0.35.1",
-    "es7-reflect-metadata": "^1.6.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
@@ -130,6 +123,9 @@
     "angular": "^1.5.5",
     "angular-mocks": "^1.5.5",
     "angular-ui-router": "^1.0.0-alpha.5",
+    "babel-polyfill": "^6.9.1",
+    "core-js": "^2.4.0",
+    "cuid": "^1.3.8",
     "jquery": "^2.2.3",
     "kendo-ui-core": "^1.0.2"
   }
