--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
-    "extends": "eslint-config-airbnb",
-
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
@@ -11,6 +10,7 @@
         "node": true
     },
 
+    "extends": "eslint-config-airbnb",
     "rules": {
         // Override any settings from the "parent" configuration
         "arrow-body-style": 0,
@@ -26,6 +26,7 @@
         "no-useless-concat": 0,
         "prefer-template":0,
         "keyword-spacing":1,
+        "no-undef": 0,
         "quotes": ["error", "single", {"allowTemplateLiterals": true}]
     }
 }
