--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,6 @@
         "no-param-reassign": 0,
         "no-else-return": 0,
         "prefer-rest-params": 1,
-        "no-unused-vars": 1,
         "no-console": 0,
         "spaced-comment": 0,
         "global-require": 1,
@@ -27,6 +26,8 @@
         "prefer-template":0,
         "keyword-spacing":1,
         "no-undef": 0,
+        "no-loop-func": 0,
+        "no-unused-vars": ["warn", {"vars": "all", "args": "none"}],
         "quotes": ["error", "single", {"allowTemplateLiterals": true}]
     }
 }
