--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "url-loader": "^0.5.7",
+    "vinyl-fs": "^2.4.3",
     "vinyl-named": "^1.1.0",
     "vinyl-paths": "^2.1.0",
     "webpack": "^2.1.0-beta.7",
