--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "supports-color": "^3.1.2",
     "through-gulp": "^0.5.0",
     "through2": "^2.0.1",
+    "true-case-path": "^1.0.2",
     "ts-helpers": "^1.1.1",
     "ts-node": "^0.7.2",
     "tslint": "^3.9.0",
